--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     padding: 0px 10px;
 }
 
-#sort-name::after {
+/* #sort-name::after {
     position: absolute;
     content: "It is like gay porn";
     color: #fff;
@@ -33,11 +33,12 @@ body {
     font-style: italic;
     top: 50px;
     left: 45%;
-}
+} */
 
 .wrapper {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     max-width: 1200px;
     margin: 30px auto;
 }
@@ -97,6 +98,26 @@ body {
 }
 
 .input-array-form li:nth-child(2) {
+    min-width: 20px;
     color: #fff;
     font-family: 'Tahoma', sans-serif;
 } 
+
+.input-Array-block {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.inptStyle {
+    width: 50px;
+    height: 50px;
+    border: none;
+    background-color: #1C2023;
+    text-align: center;
+    color: #fff;
+    font-size: 1.5em;
+    padding: 0px 10px;
+    outline: none;
+}
