--- a/style.css
+++ b/style.css
@@ -136,3 +136,25 @@ body {
     font-weight: bold;
     outline: none;
 }
+
+.output-Array-block {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.invisible {
+    display: none;
+}
+
+.outputArrayStyle {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #fff;
+    text-align: center;
+    color: #fff;
+    font-size: 1.5em;
+    font-family: 'Tahoma', sans-serif;
+    padding: 0px 10px;
+}
